mobile view changes

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -11,5 +11,6 @@
 "Horsepower":"Horsepower",
 "PriceRange":"Price Range",
 "AdvanceSearch":"+ Advanced Search",
-"FindTractorBtn":"Find Tractor" 
+"FindTractorBtn":"Find Tractor" ,
+"SocialMediaLinks":"Social Media Links"
 } 
