issues on the langugae translations

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -1,16 +1,16 @@
 {
-"compareTractor": "Compare Tractor",
-"testimonials":"Testimonials",
-"dealerLocater":"Dealer Locater",
-"CheckTractorDetails":"Check Tractor Details",
-"FindTractor":"Find The Right Tractor For You",
-"Brand":"Brand",
-"SelectBrand":"Select Brand",
-"SelectHorsepower":"Select Horsepower",
-"SelectPriceRange":"Select Price Range",
-"Horsepower":"Horsepower",
-"PriceRange":"Price Range",
-"AdvanceSearch":"+ Advanced Search",
-"FindTractorBtn":"Find Tractor" ,
-"SocialMediaLinks":"Social Media Links"
-} 
+    "Navbar": {
+      "Aboutus": "About Us",
+      "Compare": "Compare",
+      "SellTractor": "Sell Tractor",
+      "LocateDealer": "Locate Dealer",
+      "Loan": "Loan",
+      "ContentGallery": "Content Gallery",
+      "Contactus": "Contact us",
+      "Sell": "Sell"
+    },
+    "Inventory": {
+      "PopularTractors": "Popular Tractors"
+    }
+  }
+  
