--- a/public/locales/hi/common.json
+++ b/public/locales/hi/common.json
@@ -1,15 +1,16 @@
 {
-"compareTractor": "ट्रैक्टर की तुलना करें",
-"testimonials":"प्रशंसापत्र", 
-"dealerLocater":"व्यापारियों का स्थान",
-"CheckTractorDetails":"Check Tractor Details",
-"FindTractor":"Find The Right Tractor For You",
-"Brand":"Brand",
-"SelectBrand":"Select Brand",
-"SelectHorsepower":"Select Horsepower",
-"SelectPriceRange":"Select Price Range",
-"Horsepower":"Horsepower",
-"PriceRange":"Price Range",
-"AdvanceSearch":"+ Advanced Search",
-"FindTractorBtn":"Find Tractor" 
-} 
+    "Navbar": {
+      "Aboutus": "हमारे बारे में",
+      "Compare": "तुलना करें",
+      "SellTractor": "ट्रैक्टर बेचें",
+      "LocateDealer": "डीलर खोजें",
+      "Loan": "ऋण",
+      "ContentGallery": "सामग्री गैलरी",
+      "Contactus": "संपर्क करें",
+      "Sell": "बेचें"
+    },
+    "Inventory": {
+      "PopularTractors": "लोकप्रिय ट्रैक्टर"
+    }
+  }
+  
