language chnages been done

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -46,6 +46,15 @@
       "Office_Time":"Mon - Sat 8am to 6pm",
       "Send_Us_Email":"Send Us Email",
       "Email":"tractorworld@domain.net"
+    },
+
+    "About":{
+      "Bring_You_To_Future":"We bring you to the future",
+      "Tractor_World":"Tractor World",
+      "Fully_Integrated_Compony":"Tractor world is a fully vertically integrated company, with expertise in design, development and manufacture of the full spectrum of automotive components, aggregates and vehicles.",
+      "Tractors_By_Brands":"Tractors by Brands",
+      "Right_Equipment":"We Promise To Find You The Right Equipment",
+      "Get_Your_Rentals":"Get Your Rentals In Easy Steps"
     }
 
   }
