--- a/public/locales/hi/common.json
+++ b/public/locales/hi/common.json
@@ -46,6 +46,15 @@
       "Office_Time":"सोम-शनिवार सुबह 8 बजे से शाम 6 बजे तक",
       "Send_Us_Email":"हमें ईमेल भेजें",
       "Email":"tractorworld@domain.net"
+    },
+    
+    "About":{
+      "Bring_You_To_Future":"हम आपको भविष्य में लेकर आते हैं",
+      "Tractor_World":"ट्रैक्टर विश्व",
+      "Fully_Integrated_Compony":"ट्रैक्टर वर्ल्ड पूरी तरह से लंबवत एकीकृत कंपनी है, जिसके पास ऑटोमोटिव घटकों, समुच्चय और वाहनों के पूर्ण स्पेक्ट्रम के डिजाइन, विकास और निर्माण में विशेषज्ञता है।",
+      "Tractors_By_Brands":"ब्रांडों के अनुसार ट्रैक्टर",
+      "Right_Equipment":"हम आपको सही उपकरण ढूंढने का वादा करते हैं",
+      "Get_Your_Rentals":"आसान चरणों में अपनी किराए की चीजें प्राप्त करें"
     }
 
   }
