--- a/public/locales/mr/common.json
+++ b/public/locales/mr/common.json
@@ -62,6 +62,14 @@
     "Office_Time":"सोम - शनि सकाळी 8 ते संध्याकाळी 6",
     "Send_Us_Email":"आम्हाला ईमेल पाठवा",
     "Email":"tractorworld@domain.net"
+  },
+  "About":{
+    "Bring_You_To_Future":"आम्ही तुम्हाला भविष्यात आणतो",
+    "Tractor_World":"ट्रॅक्टर विश्व",
+    "Fully_Integrated_Compony":"ट्रॅक्टर वर्ल्ड ही संपूर्णपणे अनुलंब समाकलित कंपनी आहे, ज्यामध्ये ऑटोमोटिव्ह घटक, एकत्रित आणि वाहनांचे संपूर्ण स्पेक्ट्रम डिझाइन, विकास आणि निर्मितीमध्ये कौशल्य आहे|",
+    "Tractors_By_Brands":"ब्रँडद्वारे ट्रॅक्टर",
+    "Right_Equipment":"आम्ही तुम्हाला योग्य उपकरणे शोधण्याचे वचन देतो",
+    "Get_Your_Rentals":"सोप्या चरणांमध्ये तुमचे भाडे मिळवा"
   }
 
 } 
