--- a/public/locales/hi/common.json
+++ b/public/locales/hi/common.json
@@ -13,6 +13,7 @@
       "PopularTractors": "लोकप्रिय ट्रैक्टर"
     },
     "Home":{
+      "Home":"होम",
       "Explore_Tractor_World":"ट्रैक्टर वर्ल्ड का अन्वेषण करें",
       "Live_Inventory":"सजीव सूची",
       "Why_Choose_Us":"हमें क्यों चुनें",
@@ -26,7 +27,11 @@
       "Watch_Video":"वीडियो देखें",
       "Content_Gallery":"सामग्री गैलरी",
       "View_All":"सभी देखें",
-      "Latest_News_And_Update":"ताजा खबरे और अपडेट"
+      "Latest_News_And_Update":"ताजा खबरे और अपडेट",
+      "Warranty":"वारंटी",
+      "Easy_EMI":"आसान ईएमआई और मूल्य निर्धारण",
+      "Documenting":"दस्तावेज़ीकरण",
+      "Mahendra_Financing":"महेंद्र फाइनेंसिंग"
     },
     "Footer":{ 
       "Find_a_Dealer":"व्यापारी को खोजें",
@@ -55,7 +60,52 @@
       "Tractors_By_Brands":"ब्रांडों के अनुसार ट्रैक्टर",
       "Right_Equipment":"हम आपको सही उपकरण ढूंढने का वादा करते हैं",
       "Get_Your_Rentals":"आसान चरणों में अपनी किराए की चीजें प्राप्त करें"
+    },
+    "Compare":{
+      "Compare_Tractore":"ट्रैक्टरों की तुलना करें"
+    },
+    "Dealer":{
+      "DEALER_LOCATOR":"डीलर लोकेटर",
+      "Search_Nearest_Dealer":"निकटतम डीलर खोजें",
+      "State":"राज्य",
+      "Select_State":"राज्य चुनें",
+      "District":"जिला",
+      "Select_District":"जिला चुनें",
+      "Tehsil_or_Taluka":"तालुका",
+      "Select_Taluka":"तालुका चुनें",
+      "Find_Dealer":"डीलर खोजें",
+      "Tractore_Dealer_List":"Tractor Dealer List",
+      "Know_More":"अधिक जानें"
+    },
+    "Loan":{
+      "Apply_Loan":"ऋण के लिए आवेदन करें",
+      "Loan":"ऋण",
+      "Name":"नाम",
+      "Enter_Name":"अपना नाम दर्ज करें",
+      "Mobile_No":"मोबाइल नंबर",
+      "Enter_Mobile_NO":"अपना मोबाइल नंबर दर्ज करें",
+      "Apply_Now":"अभी आवेदन करें",
+      "Loan_Steps":"4 चरणों में नया ट्रैक्टर लोन",
+      "Get_New_Tractor_Loan":"इन 4 चरणों से जल्दी नया ट्रैक्टर लोन प्राप्त करें",
+      "Fill_The_Form":"फॉर्म भरें",
+      "These_Details":"ये विवरण बनाते हैं",
+      "Process_Quick":"प्रक्रिया को तेज बनाते हैं",
+      "Compare_Offers":"ऑफर की तुलना करें",
+      "Best_Loan":"सर्वश्रेष्ठ ऋण प्रस्ताव चुनें",
+      "For_You":"आपके लिए",
+      "Instant_Approval":"तुरंत स्वीकृति",
+      "Immediate_Approval_From":"से तुरंत स्वीकृति प्राप्त करें",
+      "The_Bank":"बैंक",
+      "Money_In_Acc":"आपके खाते में पैसे",
+      "You_Gett_Instant":"आप तुरंत पैसे प्राप्त कर सकते हैंn",
+      "Account":"खाता",
+      "New_Way_Farming":"ट्रैक्टर लोन कृषि के नए तरीके में परिवर्तित होता है!",
+      "Tractors_Are_Essential_Text":"ट्रैक्टर किसानों के लिए अनिवार्य उपकरण हैं, जो विभिन्न कार्यों में मदद करते हैं, जैसे कि बीज बोना और काटी गई फसलें परिवहन करना। भारत में कई छोटे किसान के लिए ट्रैक्टर खरीदना वित्तीय रूप से चुनौतीपूर्ण हो सकता है। ऐसी स्थितियों में ट्रैक्टर लोन या वित्तपोषण एक महत्वपूर्ण समाधान बन जाता है। ट्रैक्टर लोन कृषि ऋण श्रेणी में आते हैं और प्रमुख बैंकों, सरकारी वित्तीय संस्थाओं और गैर-बैंकिंग वित्तीय कंपनियों (NBFCs) द्वारा प्रदान किए जाते हैं। ये ऋण नए और लघु ट्रैक्टर की आसान अधिग्रहण की सुविधा प्रदान करते हैं। व्यक्ति या समूह आवेदन कर सकते हैं, और मासिक किस्तों (EMIs) के माध्यम से चुकौती, समूह के भीतर सामूहिक या व्यक्तिगत रूप से प्रबंधित की जा सकती है। अपने खेत के लिए ट्रैक्टर खरीदने से पहले, विभिन्न बैंकों से ट्रैक्टर लोन पर ब्याज दरों को जानना महत्वपूर्ण है। यह आपको एक सूचित निर्णय लेने में मदद करता है और आपकी कृषि निवेश के लिए सर्वोत्तम वित्तपोषण विकल्प खोजने में मदद करता है। दरों की तुलना करें ताकि आपको सबसे उपयुक्त विकल्प मिल सके। इसके अलावा, ट्रैक्टर लोन EMI कैलकुलेटर टूल आपके ट्रैक्टर लोन EMI की गणना करने का एक उत्कृष्ट तरीका है।",
+      "EMI_cal":"ईएमआई कैलक्युलेटर",
+      "Int_Rate_Comparison":"ट्रैक्टर लोन ब्याज दर तुलना",
+      "Compare_The_New_Tractor_Loan_Int":"नीचे नए ट्रैक्टर लोन ब्याज दर की तुलना करें।"
     }
+
 
   }
   
