--- a/public/locales/mr/common.json
+++ b/public/locales/mr/common.json
@@ -29,6 +29,7 @@
   },
 
 "Home":{
+    "Home":"होम",
     "Explore_Tractor_World":"ट्रॅक्टर वर्ल्डचा अभ्यास करा",
     "Live_Inventory":"थेट यादी",
     "Why_Choose_Us":"आम्हाला का निवडा",
@@ -42,7 +43,11 @@
     "Watch_Video":"व्हिडिओ पहा",
     "Content_Gallery":"सामग्री गॅलरी",
     "View_All":"सर्व पहा",
-    "Latest_News_And_Update":"ताज्या बातम्या आणि अपडेट्स"
+    "Latest_News_And_Update":"ताज्या बातम्या आणि अपडेट्स",
+    "Warranty":"वारंटी",
+    "Easy_EMI":"सुलभ ईएमआय आणि किंमत निर्धारण",
+    "Documenting":"दस्तऐवजीकरण",
+    "Mahendra_Financing":"महेंद्र फाइनेंसिंग"
   },
   "Footer":{ 
     "Find_a_Dealer":"विक्रेता शोधा",
@@ -63,6 +68,7 @@
     "Send_Us_Email":"आम्हाला ईमेल पाठवा",
     "Email":"tractorworld@domain.net"
   },
+
   "About":{
     "Bring_You_To_Future":"आम्ही तुम्हाला भविष्यात आणतो",
     "Tractor_World":"ट्रॅक्टर विश्व",
@@ -70,6 +76,51 @@
     "Tractors_By_Brands":"ब्रँडद्वारे ट्रॅक्टर",
     "Right_Equipment":"आम्ही तुम्हाला योग्य उपकरणे शोधण्याचे वचन देतो",
     "Get_Your_Rentals":"सोप्या चरणांमध्ये तुमचे भाडे मिळवा"
+  },
+  "Compare":{
+    "Compare_Tractore":"ट्रॅक्टरची तुलना करा"
+  },
+  "Dealer":{
+    "DEALER_LOCATOR":"डीलर लोकेटर",
+    "Search_Nearest_Dealer":"सर्वात जवळचा डीलर शोधा",
+    "State":"राज्य",
+    "Select_State":"राज्य निवडा",
+    "District":"जिल्हा",
+    "Select_District":"जिल्हा निवडा",
+    "Tehsil_or_Taluka":"तालुका",
+    "Select_Taluka":"तालुका निवडा",
+    "Find_Dealer":"डीलर शोधा",
+    "Tractore_Dealer_List":"Tractor Dealer List",
+    "Know_More":"अधिक माहिती मिळवा"
+  },
+  "Loan":{
+    "Apply_Loan":"कर्जासाठी अर्ज करा",
+    "Loan":"कर्ज",
+    "Name":"नाव",
+    "Enter_Name":"आपले नाव प्रविष्ट करा",
+    "Mobile_No":"मोबाइल नंबर",
+    "Enter_Mobile_NO":"आपला मोबाईल नंबर प्रविष्ट करा",
+    "Apply_Now":"आता अर्ज करा",
+    "Loan_Steps":"4 चरणांत नवीन ट्रॅक्टर कर्ज",
+    "Get_New_Tractor_Loan":"या 4 चरणांद्वारे लवकर नवीन ट्रॅक्टर कर्ज मिळवा",
+    "Fill_The_Form":"फॉर्म भरा",
+    "These_Details":"हे तपशील तयार करतात",
+    "Process_Quick":"प्रक्रिया जलद करतात",
+    "Compare_Offers":"ऑफरची तुलना करा",
+    "Best_Loan":"सर्वोत्कृष्ट कर्ज प्रस्ताव निवडा",
+    "For_You":"तुमच्यासाठी",
+    "Instant_Approval":"तत्काळ मान्यता",
+    "Immediate_Approval_From":"कडून तात्काळ मान्यता मिळवा",
+    "The_Bank":"बँक",
+    "Money_In_Acc":"आपल्या खात्यात पैसे",
+    "You_Gett_Instant":"आपण तात्काळ पैसे मिळवू शकता",
+    "Account":"खाता",
+    "New_Way_Farming":"ट्रॅक्टर कर्ज शेतीच्या नवीन पद्धतीत रूपांतरित होते!",
+    "Tractors_Are_Essential_Text":"ट्रॅक्टर शेतकऱ्यांसाठी आवश्यक साधने आहेत, जे विविध कार्यांमध्ये मदत करतात, बीज पेरणेपासून ते कापलेली पिके वाहतूक करणे. भारतातील अनेक लहान शेतकऱ्यांसाठी ट्रॅक्टर खरेदी करणे आर्थिकदृष्ट्या आव्हानात्मक असू शकते. अशा परिस्थितीत ट्रॅक्टर कर्ज किंवा वित्तीय सहाय्य एक महत्त्वपूर्ण उपाय बनतो. ट्रॅक्टर कर्ज कृषी कर्ज श्रेणीमध्ये येतात आणि प्रमुख बँका, सरकारी वित्तीय संस्थांचे आणि नॉन-बँकिंग वित्तीय कंपन्या (NBFCs) प्रदान करतात. हे कर्ज नवीन आणि लघु ट्रॅक्टरच्या सहज अधिग्रहणाला सक्षम करतात. व्यक्ती किंवा गट अर्ज करू शकतात आणि मासिक हप्त्यांद्वारे (EMIs) चुकवणे, गटामध्ये सामूहिक किंवा वैयक्तिक असू शकते. आपल्या शेतासाठी ट्रॅक्टर खरेदी करण्यापूर्वी, विविध बँकांकडून ट्रॅक्टर कर्जावर व्याजदर जाणून घेणे महत्त्वाचे आहे. हे तुम्हाला एक माहितीपूर्ण निर्णय घेण्यात मदत करते आणि आपल्या कृषी गुंतवणुकीसाठी सर्वोत्तम वित्तीय पर्याय शोधण्यात मदत करते. दरांची तुलना करा जेणेकरून तुम्हाला सर्वात योग्य पर्याय मिळू शकेल. याशिवाय, ट्रॅक्टर कर्ज EMI कॅल्क्युलेटर टूल तुमच्या ट्रॅक्टर कर्ज EMI ची गणना करण्याचा एक उत्कृष्ट मार्ग आहे.",
+    "EMI_cal":"ईएमआय कॅल्क्युलेटर",
+    "Int_Rate_Comparison":"ट्रॅक्टर कर्ज व्याज दरांची तुलना",
+    "Compare_The_New_Tractor_Loan_Int":"खाली नवीन ट्रॅक्टर कर्ज व्याज दरांची तुलना करा."
   }
+
 
 } 
