--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -103,6 +103,21 @@
       "EMI_cal":"EMI cal",
       "Int_Rate_Comparison":"Tractor Loan Interest Rate Comparison",
       "Compare_The_New_Tractor_Loan_Int":"Compare the new tractor loan interest rate below."
+    },
+    "Gallery":{
+      "Content_Gallery":"Content Gallery",
+      "New_Updates":"New Updates",
+      "Recent_Posts":"Recent Posts"
+    },
+    "Contact":{
+      "About_Requirement":"Tell us about your requirement, and write us any queries. Our support team will assist you within 24 hours.",
+      "Email_Id":"Email ID",
+      "Enter_Email":"Enter Your Email ID",
+      "Message":"Message",
+      "Your_Message":"Your Message",
+      "Submit_Request":"Submit Request",
+      "Tactor_In":"tractorworld.in",
+      "Contact_No":"+91 95533 53077"
     }
 
   }
