--- a/public/locales/hi/common.json
+++ b/public/locales/hi/common.json
@@ -10,10 +10,7 @@
       "Sell": "बेचें",
       "What_You_Looking_For":"आप क्या ढूंढ रहे हैं?",
       "Start_Typing":"टाइप करना शुरू करें", 
-      "Social_Media":"सोशल मीडिया लिंक",
-      "What_are_you_looking_for":"What are you looking for ?",
-      "Start_typing":"Start typing",
-      "title":"ट्रैक्टर वर्ल्ड"
+      "Social_Media":"सोशल मीडिया लिंक"
     },
     "Inventory": {
       "PopularTractors": "लोकप्रिय ट्रैक्टर"
@@ -39,7 +36,11 @@
       "Documenting":"दस्तावेज़ीकरण",
       "Mahendra_Financing":"महेंद्र फाइनेंसिंग",
       "Call_Now":"अब कॉल करें",
-      "Request_Call":"कॉल बैक के लिए अनुरोध करें"
+      "Request_Call":"कॉल बैक के लिए अनुरोध करें",
+      "Call":"कॉल",
+      "Enquiry":"जांच",
+      "Share":"शेअर",
+      "Submit":"प्रस्तुत करें"
     },
     "Footer":{ 
       "Find_a_Dealer":"व्यापारी को खोजें",
@@ -130,6 +131,16 @@
       "Submit_Request":"अनुरोध प्रस्तुत करें",
       "Tactor_In":"tractorworld.in",
       "Contact_No":"+91 95533 53077"
+    },
+    "Enquiry":{
+      "Implement_Prices":"किसी भी बाहरी वेबसाइट पर दिखाए गए ट्रैक्टर या उपकरण की कीमतें ट्रैक्टर वर्ल्ड ट्रैक्टर्स द्वारा अनुमोदित या अधिकृत नहीं हैं। कृपया अपने विवरण प्रस्तुत करें या अपने निकटतम अधिकृत महिंद्रा डीलरशिप से संपर्क करें ताकि आप अपने स्थान पर सर्वश्रेष्ठ कीमत प्राप्त कर सकें।",
+      "Share_Your_Details":"ट्रैक्टर की कीमतें प्राप्त करने के लिए अपने विवरण साझा करें",
+      "Select_Budget":"बजट चुनें",
+      "I_Agree":"कीमत प्राप्त करें' पर क्लिक करके, मैं सहमत हूं कि ट्रैक्टर वर्ल्ड के सहयोगी मेरी रुचि के बारे में मुझे फोन कॉल, व्हाट्सएप या किसी अन्य माध्यम से संपर्क कर सकते हैं।",
+      "Get_Price":"कीमत प्राप्त करें",
+      "More_Info":"अधिक जानकारी के लिए हमें कॉल करें",
+      "On_Call":"हमारे टोल-फ्री नंबर पर:",
+      "24*7 ":"24*7 "
     }
 
 
