--- a/public/locales/mr/common.json
+++ b/public/locales/mr/common.json
@@ -31,28 +31,33 @@
   "Inventory": {
     "PopularTractors": "लोकप्रिय ट्रॅक्टर"
   },
-  "Home": {
-    "Home": "होम",
-    "Explore_Tractor_World": "ट्रॅक्टर वर्ल्डचा अभ्यास करा",
-    "Live_Inventory": "थेट यादी",
-    "Why_Choose_Us": "आम्हाला का निवडा",
-    "Over_Deals": "15,000 हून अधिक सौदे",
-    "Best_Choice": "ट्रॅक्टर वर्ल्ड सर्वोत्तम निवड आहे",
-    "Kiusmod_Tempor": "कियुसमोड टेम्पोर इन्किडिडंट उत लेबोरे सेड डोलोरे मॅग्ना अलीक्वाय एनिम अड मिनिम वीनियम क्वीस नोस्ट्रुड व्यायाम उल्लामको लेबरिस निसी उत अलीक्विप एक्स ईए रेप्रेहें डेरिटिन व्होलुप्टे.",
-    "Buy_The_Right": "योग्य ट्रॅक्टर खरेदी करण्यासाठी तुलना करा",
-    "COMPARE": "तुलना करा",
-    "View_All_Tractor_Comparison": "सर्व ट्रॅक्टर तुलना पहा",
-    "Testimonials": "प्रशस्तिपत्र",
-    "Watch_Video": "व्हिडिओ पहा",
-    "Content_Gallery": "सामग्री गॅलरी",
-    "View_All": "सर्व पहा",
-    "Latest_News_And_Update": "ताज्या बातम्या आणि अपडेट्स",
-    "Warranty": "वारंटी",
-    "Easy_EMI": "सुलभ ईएमआय आणि किंमत निर्धारण",
-    "Documenting": "दस्तऐवजीकरण",
-    "Mahendra_Financing": "महेंद्र फाइनेंसिंग",
-    "Call_Now": "Call Now",
-    "Request_Call": "कॉल बॅकची विनंती करा"
+
+"Home":{
+    "Home":"होम",
+    "Explore_Tractor_World":"ट्रॅक्टर वर्ल्डचा अभ्यास करा",
+    "Live_Inventory":"थेट यादी",
+    "Why_Choose_Us":"आम्हाला का निवडा",
+    "Over_Deals":"15,000 हून अधिक सौदे",
+    "Best_Choice":"ट्रॅक्टर वर्ल्ड सर्वोत्तम निवड आहे",
+    "Kiusmod_Tempor":"कियुसमोड टेम्पोर इन्किडिडंट उत लेबोरे सेड डोलोरे मॅग्ना अलीक्वाय एनिम अड मिनिम वीनियम क्वीस नोस्ट्रुड व्यायाम उल्लामको लेबरिस निसी उत अलीक्विप एक्स ईए रेप्रेहें डेरिटिन व्होलुप्टे.",
+    "Buy_The_Right":"योग्य ट्रॅक्टर खरेदी करण्यासाठी तुलना करा",
+    "COMPARE":"तुलना करा",
+    "View_All_Tractor_Comparison":"सर्व ट्रॅक्टर तुलना पहा",
+    "Testimonials":"प्रशस्तिपत्र",
+    "Watch_Video":"व्हिडिओ पहा",
+    "Content_Gallery":"सामग्री गॅलरी",
+    "View_All":"सर्व पहा",
+    "Latest_News_And_Update":"ताज्या बातम्या आणि अपडेट्स",
+    "Warranty":"वारंटी",
+    "Easy_EMI":"सुलभ ईएमआय आणि किंमत निर्धारण",
+    "Documenting":"दस्तऐवजीकरण",
+    "Mahendra_Financing":"महेंद्र फाइनेंसिंग",
+    "Call_Now":"Call Now",
+    "Request_Call":"कॉल बॅकची विनंती करा",
+    "Call":"कॉल",
+    "Enquiry":"चौकशी",
+      "Share":"शेअर",
+      "Submit":"सबमिट करा"
   },
   "Footer": {
     "Find_a_Dealer": "विक्रेता शोधा",
@@ -133,14 +138,24 @@
     "New_Updates": "नवीन अद्यतने",
     "Recent_Posts": "अलीकडील पोस्ट"
   },
-  "Contact": {
-    "About_Requirement": "आपल्या आवश्यकता आम्हाला सांगा आणि कोणतेही प्रश्न आम्हाला लिहा. आमची समर्थन टीम तुम्हाला 24 तासांच्या आत मदत करेल",
-    "Email_Id": "ईमेल आयडी",
-    "Enter_Email": "आपला ईमेल आयडी प्रविष्ट करा",
-    "Message": "संदेश",
-    "Your_Message": "तुमचा संदेश",
-    "Submit_Request": "अनुरोध सबमिट करा",
-    "Tactor_In": "tractorworld.in",
-    "Contact_No": "+91 95533 53077"
+  "Contact":{
+    "About_Requirement":"आपल्या आवश्यकता आम्हाला सांगा आणि कोणतेही प्रश्न आम्हाला लिहा. आमची समर्थन टीम तुम्हाला 24 तासांच्या आत मदत करेल",
+    "Email_Id":"ईमेल आयडी",
+    "Enter_Email":"आपला ईमेल आयडी प्रविष्ट करा",
+    "Message":"संदेश",
+    "Your_Message":"तुमचा संदेश",
+    "Submit_Request":"अनुरोध सबमिट करा",
+    "Tactor_In":"tractorworld.in",
+    "Contact_No":"+91 95533 53077"
+  },
+  "Enquiry":{
+    "Implement_Prices":"कोणत्याही बाह्य वेबसाइटवर दर्शविलेल्या ट्रॅक्टर किंवा उपकरणांच्या किंमती ट्रॅक्टर वर्ल्ड ट्रॅक्टर्सद्वारे मंजूर किंवा अधिकृत नाहीत. कृपया तुमची माहिती सबमिट करा किंवा तुमच्या ठिकाणी सर्वोत्तम किंमत मिळविण्यासाठी तुमच्या जवळच्या अधिकृत महिंद्रा डीलरशीपशी संपर्क साधा.",
+    "Share_Your_Details":"ट्रॅक्टरच्या किंमती मिळवण्यासाठी तुमचे तपशील शेअर करा",
+    "Select_Budget":"बजेट निवडा",
+    "I_Agree":"किंमत मिळवा' वर क्लिक करून, मी सहमत आहे की ट्रॅक्टर वर्ल्डचे सहयोगी माझ्या आवडीबद्दल मला फोन कॉल, व्हाट्सअॅप किंवा कोणत्याही इतर माध्यमातून संपर्क करू शकतात.",
+    "Get_Price":"किंमत मिळवा",
+    "More_Info":"अधिक माहितीसाठी आम्हाला कॉल करा",
+    "On_Call":"आमच्या टोल-फ्री नंबरवर:",
+    "24*7 ":"24*7 "
   }
 }
