added missed translations

--- a/public/locales/mr/common.json
+++ b/public/locales/mr/common.json
@@ -24,9 +24,9 @@
     "What_You_Looking_For": "तुम्ही काय शोधत आहात?",
     "Start_Typing": "टायपिंग सुरू करा",
     "Social_Media": "सोशल मीडिया लिंक",
-    "What_are_you_looking_for": "What are you looking for ?",
-    "Start_typing": "Start typing",
-     "title":"ट्रॅक्टर वर्ल्ड"
+    "What_are_you_looking_for": "तुम्ही काय शोधत आहात ?",
+    "Start_typing": "टायपिंग सुरू करा",
+    "title":"ट्रॅक्टर वर्ल्ड"
   },
   "Inventory": {
     "PopularTractors": "लोकप्रिय ट्रॅक्टर"
