--- a/public/locales/mr/common.json
+++ b/public/locales/mr/common.json
@@ -26,11 +26,26 @@
     "Social_Media": "सोशल मीडिया लिंक",
     "What_are_you_looking_for": "तुम्ही काय शोधत आहात ?",
     "Start_typing": "टायपिंग सुरू करा",
-    "title":"ट्रॅक्टर वर्ल्ड"
+    "title":"ट्रॅक्टर वर्ल्ड",
+    "SearchPlaceHolder":"शोधा..."
+
   },
   "Inventory": {
     "PopularTractors": "लोकप्रिय ट्रॅक्टर"
   },
+  "SellTractor":{
+    "Heading":"तुमचा वापरलेला ट्रॅक्टर विका",
+    "Sell_Now":"आता विक्री करा",
+    "Why_Tractor_world":"ट्रॅक्टर वर्ल्ड का ?",
+    "Tractor_World_is_best_place":"तुमचा ट्रॅक्टर विकण्यासाठी ट्रॅक्टर वर्ल्ड हे सर्वोत्तम ठिकाण आहे",
+    "Why_Tractor_world_info1":"जर वरीलपैकी कोणत्याही प्रश्नाने तुमची हालचाल रोखली असेल, तर होय, तुम्ही योग्य ठिकाणी आला आहात. अनेक प्रश्न, एक उत्तर - ट्रॅक्टर जंक्शन. आम्हाला ट्रॅक्टर जंक्शन येथे माहित आहे की तुमच्यासाठी ट्रॅक्टरची किंमत काय आहे आणि त्याचा तुमच्या दैनंदिन जीवनावर कसा परिणाम होतो. प्रसिद्ध कृषी संशोधकांनी म्हटल्याप्रमाणे, ट्रॅक्टर इतर वाहनांप्रमाणे आकर्षक वैशिष्ट्यांसह येत नाहीत परंतु निश्चितच आकर्षक किंमतीसह बाहेर पडतात. सोप्या शब्दात, उच्च पुनर्विक्री मूल्यासह आलेला ट्रॅक्टर चांगला पुनर्विक्री किंमत देत नसलेल्या ट्रॅक्टरपेक्षा अधिक विश्वासार्ह आहे.",
+     "Why_Tractor_world_info2":"ट्रॅक्टर जंक्शन ही किंमत तुमच्यासाठी आणखी चांगली बनवण्याचे काम करते. जर तुम्हाला तुमचा जुना ट्रॅक्टर उत्तम दरात आणि सहजतेने विकायचा असेल तर आम्ही तुम्हाला एक सोपी प्रक्रिया उपलब्ध करून दिली आहे जी तुम्हाला आराम देते आणि तुमच्या दैनंदिन जीवनात अडथळा आणत नाही. आमच्याकडे नोंदणी करा, तुमची चौकशी सबमिट करा, तुमच्या ट्रॅक्टरबद्दल अपडेट पोस्ट करा आणि तुमचे काम पूर्ण झाले, आमचे उच्च प्रशिक्षित ट्रॅक्टर विशेषज्ञ तुमच्या ट्रॅक्टरची सर्वोत्तम किंमत उद्धृत करतात आणि ऑन-बोर्ड खरेदीदारांना त्रासमुक्त करण्यासाठी काम करतात. जुना ट्रॅक्टर विकणे इतके सोपे कधीच नव्हते, ट्रॅक्टर जंक्शनसह तुमचा ट्रॅक्टर तुम्हाला तुमच्याप्रमाणेच आवडतो.",
+     "Read_less":"कमी वाचा",
+     "Read_more":"अधिक वाचा",
+     "Thinking_to_upgrade" :"तुमचा जुना ट्रॅक्टर नवीन घेऊन अपग्रेड करण्याचा विचार करत आहात?",
+     "Waiting_for_bestOffres":"सर्वोत्तम ऑफर आणि योजनांची वाट पाहत आहात?",
+     "Have_an_used_tractor":"विकण्यासाठी वापरलेला ट्रॅक्टर आहे का?"
+   },
 
 "Home":{
     "Home":"होम",
