content hub translations

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -35,6 +35,9 @@
     },
     "Home":{
       "Home":"Home",
+      "Content_Hub":"Content Hub",
+      "Videos":"Videos",
+      "Blog":"Blog",
       "Explore_Tractor_World":"Explore Tractor World",
       "Live_Inventory":"Live Inventory",
       "Why_Choose_Us":"Why Choose Us",
