--- a/public/locales/hi/common.json
+++ b/public/locales/hi/common.json
@@ -34,6 +34,9 @@
   },
   "Home": {
     "Home": "होम",
+    "Content_Hub":"सामग्री हब",
+    "Videos":"वीडियो",
+    "Blog":"ब्लॉग",
     "Explore_Tractor_World": "ट्रैक्टर वर्ल्ड का अन्वेषण करें",
     "Live_Inventory": "सजीव सूची",
     "Why_Choose_Us": "हमें क्यों चुनें",
