--- a/public/locales/mr/common.json
+++ b/public/locales/mr/common.json
@@ -49,6 +49,9 @@
 
 "Home":{
     "Home":"होम",
+    "Content_Hub":"सामग्री हब",
+    "Videos":"व्हिडिओ",
+    "Blog":"ब्लॉग",
     "Explore_Tractor_World":"ट्रॅक्टर वर्ल्डचा अभ्यास करा",
     "Live_Inventory":"थेट यादी",
     "Why_Choose_Us":"आम्हाला का निवडा",
